--- a/index.html
+++ b/index.html
@@ -141,11 +141,10 @@
             <div class="card1" style="margin-top: 80px;">
                 <h3 style="background-color: bisque; font-size: 20px;">Activity Report</h3>
                 <p>Active Visitors:<strong>3457</strong></p>
-                
                 <p>Product Page Views: <strong>1,250</strong></p>
                 <p>Page Views per Minute: <strong>120</strong></p>
                 <p>New Signups Today: <strong>87</strong></p>
-                <p>Conversions: <strong>24%</strong></p>
+                <p style="text-align:center;">  <strong>a</strong></p>
                 
                 <a href="#" class="edit-btn" style="font-size: 10px;">
                     Real-Time Report <i class='bx bx-right-arrow-alt'></i>
